--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/calmisland/kidsloop-px#readme",
   "dependencies": {
-    "typescript": "^4.0.5"
+    "@material-ui/core": "^4.11.0",
+    "react": "^17.0.1",
+    "styled-components": "^5.2.1",
+    "styled-icons": "^10.22.0"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.4"
   }
 }
