--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,18 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "noEmit": true,
+        "noImplicitAny": true,
         "module": "ESNext",
+        "target": "esnext",
+        "jsx": "react",
+        "allowJs": true,
+        "strictNullChecks": true,
+        "esModuleInterop": true,
         "sourceMap": true,
-        "outDir": "./dist"
-    }    
+        "outDir": "./dist",
+        "moduleResolution": "node",
+        "skipLibCheck": true
+    },
+    // "include": ["src/**/*"],
+    // "exclude": ["node_modules"]
 }
