--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
-  "name": "kidsloop-px",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@bitbucket.org/calmisland/kidsloop-px.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "homepage": "https://bitbucket.org/calmisland/kidsloop-px#readme",
-  "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "react": "^17.0.1",
-    "styled-components": "^5.2.1",
-    "styled-icons": "^10.22.0"
-  },
-  "devDependencies": {
-    "@types/styled-components": "^5.1.4"
-  }
+    "name": "kidsloop-px",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "webpack",
+        "start": "webpack-dev-server",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@bitbucket.org/calmisland/kidsloop-px.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "homepage": "https://bitbucket.org/calmisland/kidsloop-px#readme",
+    "dependencies": {
+        "@material-ui/core": "^4.11.0",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
+        "styled-components": "^5.2.1",
+        "styled-icons": "^10.22.0"
+    },
+    "devDependencies": {
+        "@types/react-dom": "^16.9.9",
+        "@types/styled-components": "^5.1.4",
+        "html-webpack-plugin": "^4.5.0",
+        "ts-loader": "^8.0.11",
+        "typescript": "^4.0.5",
+        "webpack": "^5.4.0",
+        "webpack-cli": "^4.2.0",
+        "webpack-dev-server": "^3.11.0"
+    }
 }
