--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@material-ui/core": "^4.11.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-intl": "^5.10.0",
         "styled-components": "^5.2.1",
         "styled-icons": "^10.22.0"
     },
