--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "devDependencies": {
         "@types/react-dom": "^16.9.9",
         "@types/styled-components": "^5.1.4",
+        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^4.5.0",
         "ts-loader": "^8.0.11",
         "typescript": "^4.0.5",
