--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.56",
+        "node-source-han-sans-sc": "^1.1.0-2.001R",
         "react": "^17.0.1",
         "react-device-detect": "^1.14.0",
         "react-dom": "^17.0.1",
         "react-intl": "^5.10.0",
         "react-router-dom": "^5.2.0",
         "styled-components": "^5.2.1",
-        "styled-icons": "^10.22.0"
+        "styled-icons": "^10.22.0",
+        "typeface-nanum-square-round": "^1.0.2"
     },
     "devDependencies": {
         "@types/react-dom": "^16.9.9",
