--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
         "@types/react-dom": "^16.9.9",
         "@types/react-router-dom": "^5.1.6",
         "@types/styled-components": "^5.1.4",
+        "css-loader": "^5.0.1",
+        "css-modules-typescript-loader": "^4.0.1",
         "file-loader": "^6.2.0",
-        "html-webpack-plugin": "^4.5.0",
+        "style-loader": "^2.0.0",
         "ts-loader": "^8.0.11",
         "typescript": "^4.0.5",
         "webpack": "^5.4.0",
