--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "build": "webpack",
-        "start": "webpack-dev-server",
+        "start": "webpack serve",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
@@ -34,6 +34,7 @@
         "@types/react-dom": "^16.9.9",
         "@types/react-router-dom": "^5.1.6",
         "@types/styled-components": "^5.1.4",
+        "@webpack-cli/serve": "^1.1.0",
         "css-loader": "^5.0.1",
         "css-modules-typescript-loader": "^4.0.1",
         "file-loader": "^6.2.0",
