--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "webpack",
+        "build:wp": "webpack",
         "start": "webpack serve",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build:tsc": "tsc"
     },
     "repository": {
         "type": "git",
@@ -31,12 +31,19 @@
         "typeface-nanum-square-round": "1.0.2"
     },
     "devDependencies": {
+        "@babel/core": "7.12.3",
+        "@babel/plugin-proposal-class-properties": "7.12.1",
+        "@babel/plugin-proposal-object-rest-spread": "7.12.1",
+        "@babel/preset-env": "7.12.1",
+        "@babel/preset-react": "7.12.5",
+        "@babel/preset-typescript": "7.12.1",
         "@types/react-dom": "16.9.9",
         "@types/react-router-dom": "5.1.6",
         "@types/styled-components": "5.1.4",
         "@typescript-eslint/eslint-plugin": "4.8.1",
         "@typescript-eslint/parser": "4.8.1",
         "@webpack-cli/serve": "1.1.0",
+        "babel-loader": "8.2.1",
         "css-loader": "5.0.1",
         "css-modules-typescript-loader": "4.0.1",
         "eslint": "7.13.0",
@@ -44,9 +51,11 @@
         "eslint-plugin-putout": "6.3.1",
         "eslint-plugin-react": "7.21.5",
         "file-loader": "6.2.0",
+        "html-webpack-plugin": "4.5.0",
         "style-loader": "2.0.0",
         "ts-loader": "8.0.11",
         "typescript": "4.0.5",
+        "url-loader": "4.1.1",
         "webpack": "5.5.0",
         "webpack-cli": "4.2.0",
         "webpack-dev-server": "3.11.0"
