--- a/package.json
+++ b/package.json
@@ -34,9 +34,13 @@
         "@types/react-dom": "^16.9.9",
         "@types/react-router-dom": "^5.1.6",
         "@types/styled-components": "^5.1.4",
+        "@typescript-eslint/eslint-plugin": "4.8.1",
+        "@typescript-eslint/parser": "4.8.1",
         "@webpack-cli/serve": "^1.1.0",
         "css-loader": "^5.0.1",
         "css-modules-typescript-loader": "^4.0.1",
+        "eslint": "7.13.0",
+        "eslint-plugin-react": "7.21.5",
         "file-loader": "^6.2.0",
         "style-loader": "^2.0.0",
         "ts-loader": "^8.0.11",
