--- a/package.json
+++ b/package.json
@@ -17,36 +17,38 @@
     "license": "ISC",
     "homepage": "https://bitbucket.org/calmisland/kidsloop-px#readme",
     "dependencies": {
-        "@material-ui/core": "^4.11.0",
-        "@material-ui/icons": "^4.9.1",
-        "@material-ui/lab": "^4.0.0-alpha.56",
-        "node-source-han-sans-sc": "^1.1.0-2.001R",
-        "react": "^17.0.1",
-        "react-device-detect": "^1.14.0",
-        "react-dom": "^17.0.1",
-        "react-intl": "^5.10.0",
-        "react-router-dom": "^5.2.0",
-        "styled-components": "^5.2.1",
-        "styled-icons": "^10.22.0",
-        "typeface-nanum-square-round": "^1.0.2"
+        "@material-ui/core": "4.11.0",
+        "@material-ui/icons": "4.9.1",
+        "@material-ui/lab": "4.0.0-alpha.56",
+        "node-source-han-sans-sc": "1.1.0-2.001R",
+        "react": "17.0.1",
+        "react-device-detect": "1.14.0",
+        "react-dom": "17.0.1",
+        "react-intl": "5.10.1",
+        "react-router-dom": "5.2.0",
+        "styled-components": "5.2.1",
+        "styled-icons": "10.22.0",
+        "typeface-nanum-square-round": "1.0.2"
     },
     "devDependencies": {
-        "@types/react-dom": "^16.9.9",
-        "@types/react-router-dom": "^5.1.6",
-        "@types/styled-components": "^5.1.4",
+        "@types/react-dom": "16.9.9",
+        "@types/react-router-dom": "5.1.6",
+        "@types/styled-components": "5.1.4",
         "@typescript-eslint/eslint-plugin": "4.8.1",
         "@typescript-eslint/parser": "4.8.1",
-        "@webpack-cli/serve": "^1.1.0",
-        "css-loader": "^5.0.1",
-        "css-modules-typescript-loader": "^4.0.1",
+        "@webpack-cli/serve": "1.1.0",
+        "css-loader": "5.0.1",
+        "css-modules-typescript-loader": "4.0.1",
         "eslint": "7.13.0",
+        "eslint-plugin-modules-newline": "0.0.4",
+        "eslint-plugin-putout": "6.3.1",
         "eslint-plugin-react": "7.21.5",
-        "file-loader": "^6.2.0",
-        "style-loader": "^2.0.0",
-        "ts-loader": "^8.0.11",
-        "typescript": "^4.0.5",
-        "webpack": "^5.4.0",
-        "webpack-cli": "^4.2.0",
-        "webpack-dev-server": "^3.11.0"
+        "file-loader": "6.2.0",
+        "style-loader": "2.0.0",
+        "ts-loader": "8.0.11",
+        "typescript": "4.0.5",
+        "webpack": "5.5.0",
+        "webpack-cli": "4.2.0",
+        "webpack-dev-server": "3.11.0"
     }
 }
