--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
     "name": "kidsloop-px",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "dist/entry.ts",
+    "types": "dist/entry.d.ts",
     "scripts": {
-        "build": "rm -r dist && webpack"
+        "build": "webpack"
     },
     "repository": {
         "type": "git",
@@ -42,6 +43,7 @@
         "@typescript-eslint/parser": "4.8.1",
         "@webpack-cli/serve": "1.1.0",
         "babel-loader": "8.2.1",
+        "clean-webpack-plugin": "3.0.0",
         "css-loader": "5.0.1",
         "css-modules-typescript-loader": "4.0.1",
         "eslint": "7.14.0",
@@ -49,6 +51,7 @@
         "eslint-plugin-putout": "6.5.1",
         "eslint-plugin-react": "7.21.5",
         "file-loader": "6.2.0",
+        "glob": "7.1.6",
         "html-webpack-plugin": "4.5.0",
         "style-loader": "2.0.0",
         "ts-loader": "8.0.11",
