fine tuned webpack config

--- a/package.json
+++ b/package.json
@@ -1,46 +1,50 @@
 {
     "name": "kidsloop-px",
     "version": "1.0.0",
-    "description": "",
-    "main": "dist/entry.ts",
-    "types": "dist/entry.d.ts",
+    "description": "KidsLoop Product Experience UI Library",
+    "main": "dist/main.js",
+    "types": "dist/types/index.d.ts",
     "scripts": {
-        "build": "webpack"
+        "build:js": "webpack",
+        "build:types": "tsc --emitDeclarationOnly",
+        "build": "npm run build:js && npm run build:types"
     },
     "repository": {
         "type": "git",
         "url": "git+ssh://git@bitbucket.org/calmisland/kidsloop-px.git"
     },
     "keywords": [],
-    "author": "",
+    "author": "KidsLoop",
     "license": "ISC",
     "homepage": "https://bitbucket.org/calmisland/kidsloop-px#readme",
     "dependencies": {
-        "@material-ui/core": "4.11.0",
+        "@material-ui/core": "4.11.1",
         "@material-ui/icons": "4.9.1",
         "@material-ui/lab": "4.0.0-alpha.56",
         "node-source-han-sans-sc": "1.1.0-2.001R",
-        "react": "17.0.1",
+        "react": "16.14.0",
         "react-device-detect": "1.14.0",
-        "react-dom": "17.0.1",
+        "react-dom": "16.14.0",
         "react-intl": "5.10.4",
         "react-router-dom": "5.2.0",
         "styled-components": "5.2.1",
         "styled-icons": "10.22.0",
-        "typeface-nanum-square-round": "1.0.2"
+        "typeface-nanum-square-round": "1.0.2",
+        "webpack-node-externals": "2.5.2"
     },
     "devDependencies": {
-        "@babel/core": "7.12.7",
+        "@babel/core": "7.12.9",
         "@babel/plugin-proposal-class-properties": "7.12.1",
         "@babel/plugin-proposal-object-rest-spread": "7.12.1",
         "@babel/preset-env": "7.12.7",
         "@babel/preset-react": "7.12.7",
         "@babel/preset-typescript": "7.12.7",
-        "@types/react-dom": "17.0.0",
+        "@types/react": "16.9.56",
+        "@types/react-dom": "16.9.9",
         "@types/react-router-dom": "5.1.6",
         "@types/styled-components": "5.1.4",
-        "@typescript-eslint/eslint-plugin": "4.8.1",
-        "@typescript-eslint/parser": "4.8.1",
+        "@typescript-eslint/eslint-plugin": "4.8.2",
+        "@typescript-eslint/parser": "4.8.2",
         "@webpack-cli/serve": "1.1.0",
         "babel-loader": "8.2.1",
         "clean-webpack-plugin": "3.0.0",
@@ -48,9 +52,10 @@
         "css-modules-typescript-loader": "4.0.1",
         "eslint": "7.14.0",
         "eslint-plugin-modules-newline": "0.0.4",
-        "eslint-plugin-putout": "6.5.1",
+        "eslint-plugin-putout": "6.7.0",
         "eslint-plugin-react": "7.21.5",
         "file-loader": "6.2.0",
+        "fork-ts-checker-webpack-plugin": "6.0.3",
         "glob": "7.1.6",
         "html-webpack-plugin": "4.5.0",
         "style-loader": "2.0.0",
