--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,13 @@
         "@babel/preset-react"
     ],
     "plugins": [
-        "@babel/proposal-class-properties",
+        "@babel/plugin-transform-typescript",
+        [
+            "@babel/proposal-class-properties",
+            {
+                "loose": true
+            }
+        ],
         "@babel/proposal-object-rest-spread"
     ]
 }
