--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "author": "KidsLoop",
     "license": "ISC",
     "homepage": "https://bitbucket.org/calmisland/kidsloop-px#readme",
-    "dependencies": {
+    "peerDependencies": {
+        "@types/react": "16.9.56",
+        "@types/react-dom": "16.9.9",
+        "@types/react-router-dom": "5.1.6",
+        "@types/styled-components": "5.1.4",
         "@material-ui/core": "4.11.1",
         "@material-ui/icons": "4.9.1",
         "@material-ui/lab": "4.0.0-alpha.56",
@@ -29,8 +33,7 @@
         "react-router-dom": "5.2.0",
         "styled-components": "5.2.1",
         "styled-icons": "10.22.0",
-        "typeface-nanum-square-round": "1.0.2",
-        "webpack-node-externals": "2.5.2"
+        "typeface-nanum-square-round": "1.0.2"
     },
     "devDependencies": {
         "@babel/core": "7.12.9",
@@ -39,15 +42,12 @@
         "@babel/preset-env": "7.12.7",
         "@babel/preset-react": "7.12.7",
         "@babel/preset-typescript": "7.12.7",
-        "@types/react": "16.9.56",
-        "@types/react-dom": "16.9.9",
-        "@types/react-router-dom": "5.1.6",
-        "@types/styled-components": "5.1.4",
         "@typescript-eslint/eslint-plugin": "4.8.2",
         "@typescript-eslint/parser": "4.8.2",
         "@webpack-cli/serve": "1.1.0",
         "babel-loader": "8.2.1",
         "clean-webpack-plugin": "3.0.0",
+        "copy-webpack-plugin": "6.3.2",
         "css-loader": "5.0.1",
         "css-modules-typescript-loader": "4.0.1",
         "eslint": "7.14.0",
@@ -57,13 +57,12 @@
         "file-loader": "6.2.0",
         "fork-ts-checker-webpack-plugin": "6.0.3",
         "glob": "7.1.6",
-        "html-webpack-plugin": "4.5.0",
         "style-loader": "2.0.0",
         "ts-loader": "8.0.11",
         "typescript": "4.1.2",
-        "url-loader": "4.1.1",
         "webpack": "5.6.0",
         "webpack-cli": "4.2.0",
-        "webpack-dev-server": "3.11.0"
+        "webpack-dev-server": "3.11.0",
+        "webpack-node-externals": "2.5.2"
     }
 }
