--- a/package.json
+++ b/package.json
@@ -18,22 +18,22 @@
     "license": "ISC",
     "homepage": "https://bitbucket.org/calmisland/kidsloop-px#readme",
     "peerDependencies": {
-        "@types/react": "16.9.56",
-        "@types/react-dom": "16.9.9",
-        "@types/react-router-dom": "5.1.6",
-        "@types/styled-components": "5.1.4",
-        "@material-ui/core": "4.11.1",
-        "@material-ui/icons": "4.9.1",
-        "@material-ui/lab": "4.0.0-alpha.56",
-        "node-source-han-sans-sc": "1.1.0-2.001R",
-        "react": "16.14.0",
-        "react-device-detect": "1.14.0",
-        "react-dom": "16.14.0",
-        "react-intl": "5.10.4",
-        "react-router-dom": "5.2.0",
-        "styled-components": "5.2.1",
-        "styled-icons": "10.22.0",
-        "typeface-nanum-square-round": "1.0.2"
+        "@material-ui/core": "^4.11.1",
+        "@material-ui/icons": "^4.9.1",
+        "@material-ui/lab": "^4.0.0-alpha.56",
+        "@types/react": "^16.8.6 || ^17.0.0",
+        "@types/react-dom": "^16.9.9",
+        "@types/react-router-dom": "^5.1.6",
+        "@types/styled-components": "^5.1.4",
+        "node-source-han-sans-sc": "^1.1.0-2.001R",
+        "react": "^16.8.0 || ^17.0.0",
+        "react-device-detect": "^1.14.0",
+        "react-dom": "^16.8.0 || ^17.0.0",
+        "react-intl": "^5.10.4",
+        "react-router-dom": "^5.2.0",
+        "styled-components": "^5.2.1",
+        "styled-icons": "^10.22.0",
+        "typeface-nanum-square-round": "^1.0.2"
     },
     "devDependencies": {
         "@babel/core": "7.12.9",
