--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "kidsloop-px",
     "version": "1.0.0",
     "description": "KidsLoop Product Experience UI Library",
-    "main": "dist/main.js",
+    "main": "./dist/main.js",
     "types": "dist/types/index.d.ts",
     "scripts": {
         "build:js": "webpack",
