--- a/example/package.json
+++ b/example/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.1",
+    "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "4.0.0-alpha.0",
-    "@material-ui/pickers": "^4.0.0-alpha.12",
+    "@material-ui/lab": "4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "11.2.2",
     "@testing-library/user-event": "12.2.2",
-    "kidsloop-px": "file:../",
+    "kidsloop-px": "git+https://bitbucket.org/calmisland/kidsloop-px.git#068b8bf2bebbdba211cb8edce04524b0318721da",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-scripts": "4.0.1",
