--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "scripts": {
         "build:js": "webpack",
         "build:types": "tsc --emitDeclarationOnly",
-        "build": "npm run build:js && npm run build:types"
+        "build": "npm test && npm run build:js && npm run build:types",
+        "test": "jest"
     },
     "repository": {
         "type": "git",
@@ -42,6 +43,7 @@
         "@babel/preset-env": "7.12.7",
         "@babel/preset-react": "7.12.7",
         "@babel/preset-typescript": "7.12.7",
+        "@types/jest": "26.0.15",
         "@typescript-eslint/eslint-plugin": "4.8.2",
         "@typescript-eslint/parser": "4.8.2",
         "@webpack-cli/serve": "1.1.0",
@@ -51,13 +53,16 @@
         "css-loader": "5.0.1",
         "css-modules-typescript-loader": "4.0.1",
         "eslint": "7.14.0",
+        "eslint-plugin-jest": "24.1.3",
         "eslint-plugin-modules-newline": "0.0.4",
         "eslint-plugin-putout": "6.7.0",
         "eslint-plugin-react": "7.21.5",
         "file-loader": "6.2.0",
         "fork-ts-checker-webpack-plugin": "6.0.3",
         "glob": "7.1.6",
+        "jest": "26.6.3",
         "style-loader": "2.0.0",
+        "ts-jest": "26.4.4",
         "ts-loader": "8.0.11",
         "typescript": "4.1.2",
         "webpack": "5.6.0",
