--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
         "strict": true,
         "target": "ES6",
         "types": [
-            "react"
+            "react",
+            "jest"
         ]
     },
     "include": [
@@ -24,6 +25,8 @@
     ],
     "exclude": [
         "node_modules",
-        "dist"
+        "dist",
+        "src/**/*.test.ts",
+        "src/**/*.test.tsx"
     ]
 }
