--- a/package.json
+++ b/package.json
@@ -46,6 +46,11 @@
         "@types/jest": "26.0.15",
         "@typescript-eslint/eslint-plugin": "4.8.2",
         "@typescript-eslint/parser": "4.8.2",
+        "@testing-library/jest-dom": "5.11.6",
+        "@testing-library/react": "11.2.2",
+        "@testing-library/user-event": "12.3.0",
+        "@types/node": "14.14.10",
+        "@types/testing-library__jest-dom": "5.9.5",
         "@webpack-cli/serve": "1.1.0",
         "babel-loader": "8.2.1",
         "clean-webpack-plugin": "3.0.0",
@@ -64,6 +69,7 @@
         "style-loader": "2.0.0",
         "ts-jest": "26.4.4",
         "ts-loader": "8.0.11",
+        "ts-node": "9.0.0",
         "typescript": "4.1.2",
         "webpack": "5.6.0",
         "webpack-cli": "4.2.0",
