--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
         "target": "ES6",
         "types": [
             "react",
-            "jest"
+            "jest",
+            "@testing-library/jest-dom",
+            "node"
         ]
     },
     "include": [
