--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
         "@material-ui/core": "^4.11.1",
         "@material-ui/icons": "^4.9.1",
         "@material-ui/lab": "^4.0.0-alpha.56",
-        "@types/react": "^16.8.6 || ^17.0.0",
-        "@types/react-dom": "^16.9.9",
+        "@types/react": "^16.0.0",
+        "@types/react-dom": "^16.0.0",
         "@types/react-router-dom": "^5.1.6",
         "@types/styled-components": "^5.1.4",
         "node-source-han-sans-sc": "^1.1.0-2.001R",
-        "react": "^16.8.0 || ^17.0.0",
+        "react": "^16.0.0",
         "react-device-detect": "^1.14.0",
-        "react-dom": "^16.8.0 || ^17.0.0",
-        "react-intl": "^5.10.4",
+        "react-dom": "^16.0.0",
+        "react-intl": "^5.10.6",
         "react-router-dom": "^5.2.0",
         "styled-components": "^5.2.1",
         "styled-icons": "^10.22.0",
@@ -43,16 +43,16 @@
         "@babel/preset-env": "7.12.7",
         "@babel/preset-react": "7.12.7",
         "@babel/preset-typescript": "7.12.7",
-        "@types/jest": "26.0.15",
-        "@typescript-eslint/eslint-plugin": "4.8.2",
-        "@typescript-eslint/parser": "4.8.2",
         "@testing-library/jest-dom": "5.11.6",
         "@testing-library/react": "11.2.2",
         "@testing-library/user-event": "12.3.0",
+        "@types/jest": "26.0.16",
         "@types/node": "14.14.10",
         "@types/testing-library__jest-dom": "5.9.5",
+        "@typescript-eslint/eslint-plugin": "4.9.0",
+        "@typescript-eslint/parser": "4.9.0",
         "@webpack-cli/serve": "1.1.0",
-        "babel-loader": "8.2.1",
+        "babel-loader": "8.2.2",
         "clean-webpack-plugin": "3.0.0",
         "copy-webpack-plugin": "6.3.2",
         "css-loader": "5.0.1",
@@ -60,10 +60,10 @@
         "eslint": "7.14.0",
         "eslint-plugin-jest": "24.1.3",
         "eslint-plugin-modules-newline": "0.0.4",
-        "eslint-plugin-putout": "6.7.0",
+        "eslint-plugin-putout": "6.8.1",
         "eslint-plugin-react": "7.21.5",
         "file-loader": "6.2.0",
-        "fork-ts-checker-webpack-plugin": "6.0.3",
+        "fork-ts-checker-webpack-plugin": "6.0.4",
         "glob": "7.1.6",
         "jest": "26.6.3",
         "style-loader": "2.0.0",
@@ -71,7 +71,7 @@
         "ts-loader": "8.0.11",
         "ts-node": "9.0.0",
         "typescript": "4.1.2",
-        "webpack": "5.6.0",
+        "webpack": "4.44.2",
         "webpack-cli": "4.2.0",
         "webpack-dev-server": "3.11.0",
         "webpack-node-externals": "2.5.2"
