--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@types/react-dom": "^16.0.0",
         "@types/react-router-dom": "^5.1.6",
         "@types/styled-components": "^5.1.4",
+        "lodash.pick": "4.4.0",
         "node-source-han-sans-sc": "^1.1.0-2.001R",
         "react": "^16.0.0",
         "react-device-detect": "^1.14.0",
@@ -47,6 +48,7 @@
         "@testing-library/react": "11.2.2",
         "@testing-library/user-event": "12.3.0",
         "@types/jest": "26.0.16",
+        "@types/lodash": "4.14.165",
         "@types/node": "14.14.10",
         "@types/testing-library__jest-dom": "5.9.5",
         "@typescript-eslint/eslint-plugin": "4.9.0",
