install putout & fix linting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
         ]
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "**.js"
     ],
     "exclude": [
         "node_modules",
