--- a/package.json
+++ b/package.json
@@ -52,23 +52,24 @@
         "@types/lodash": "4.14.165",
         "@types/node": "14.14.10",
         "@types/testing-library__jest-dom": "5.9.5",
-        "@typescript-eslint/eslint-plugin": "4.9.0",
-        "@typescript-eslint/parser": "4.9.0",
+        "@typescript-eslint/eslint-plugin": "4.12.0",
+        "@typescript-eslint/parser": "4.12.0",
         "@webpack-cli/serve": "1.1.0",
         "babel-loader": "8.2.2",
         "clean-webpack-plugin": "3.0.0",
         "copy-webpack-plugin": "6.3.2",
         "css-loader": "5.0.1",
         "css-modules-typescript-loader": "4.0.1",
-        "eslint": "7.14.0",
+        "eslint": "7.17.0",
         "eslint-plugin-jest": "24.1.3",
         "eslint-plugin-modules-newline": "0.0.4",
-        "eslint-plugin-putout": "6.8.1",
-        "eslint-plugin-react": "7.21.5",
+        "eslint-plugin-putout": "6.11.1",
+        "eslint-plugin-react": "7.22.0",
         "file-loader": "6.2.0",
         "fork-ts-checker-webpack-plugin": "6.0.4",
         "glob": "7.1.6",
         "jest": "26.6.3",
+        "putout": "13.1.2",
         "style-loader": "2.0.0",
         "ts-jest": "26.4.4",
         "ts-loader": "8.0.11",
@@ -80,7 +81,6 @@
         "webpack-node-externals": "2.5.2"
     },
     "dependencies": {
-        "notistack": "1.0.3",
-        "react-cookie": "^4.0.3"
+        "notistack": "1.0.3"
     }
 }
