--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
         "lodash.pick": "4.4.0",
         "node-source-han-sans-sc": "^1.1.0-2.001R",
         "react": "^16.0.0",
-        "react-cookie": "^4.0.3",
         "react-device-detect": "^1.14.0",
         "react-dom": "^16.0.0",
         "react-intl": "^5.10.6",
@@ -81,6 +80,7 @@
         "webpack-node-externals": "2.5.2"
     },
     "dependencies": {
-        "notistack": "1.0.3"
+        "notistack": "1.0.3",
+        "react-cookie": "4.0.3"
     }
 }
