--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -6,6 +6,12 @@
     "include": [
         "**.js",
         "**.ts",
-        "**/*"
+        "**/*",
+        "src/**/*.test.ts",
+        "src/**/*.test.tsx"
+    ],
+    "exclude": [
+        "node_modules",
+        "dist"
     ]
 }
