--- a/package.json
+++ b/package.json
@@ -26,61 +26,56 @@
         "@types/react-dom": "^16.0.0",
         "@types/react-router-dom": "^5.1.6",
         "@types/styled-components": "^5.1.4",
-        "lodash.pick": "4.4.0",
-        "node-source-han-sans-sc": "^1.1.0-2.001R",
         "react": "^16.0.0",
-        "react-device-detect": "^1.14.0",
         "react-dom": "^16.0.0",
-        "react-intl": "^5.10.6",
-        "react-router-dom": "^5.2.0",
         "styled-components": "^5.2.1",
-        "styled-icons": "^10.22.0",
-        "typeface-nanum-square-round": "^1.0.2"
+        "styled-icons": "^10.22.0"
     },
     "devDependencies": {
-        "@babel/core": "7.12.9",
+        "@babel/core": "7.12.10",
         "@babel/plugin-proposal-class-properties": "7.12.1",
         "@babel/plugin-proposal-object-rest-spread": "7.12.1",
-        "@babel/preset-env": "7.12.7",
-        "@babel/preset-react": "7.12.7",
+        "@babel/preset-env": "7.12.11",
+        "@babel/preset-react": "7.12.10",
         "@babel/preset-typescript": "7.12.7",
-        "@testing-library/jest-dom": "5.11.6",
-        "@testing-library/react": "11.2.2",
-        "@testing-library/user-event": "12.3.0",
-        "@types/jest": "26.0.16",
-        "@types/lodash": "4.14.165",
-        "@types/node": "14.14.10",
+        "@testing-library/jest-dom": "5.11.9",
+        "@testing-library/react": "11.2.3",
+        "@testing-library/user-event": "12.6.2",
+        "@types/jest": "26.0.20",
+        "@types/lodash": "4.14.168",
+        "@types/node": "14.14.22",
         "@types/testing-library__jest-dom": "5.9.5",
-        "@typescript-eslint/eslint-plugin": "4.12.0",
-        "@typescript-eslint/parser": "4.12.0",
-        "@webpack-cli/serve": "1.1.0",
+        "@typescript-eslint/eslint-plugin": "4.14.1",
+        "@typescript-eslint/parser": "4.14.1",
+        "@webpack-cli/serve": "1.2.2",
         "babel-loader": "8.2.2",
         "clean-webpack-plugin": "3.0.0",
-        "copy-webpack-plugin": "6.3.2",
+        "copy-webpack-plugin": "7.0.0",
         "css-loader": "5.0.1",
         "css-modules-typescript-loader": "4.0.1",
-        "eslint": "7.17.0",
+        "eslint": "7.18.0",
         "eslint-plugin-jest": "24.1.3",
-        "eslint-plugin-modules-newline": "0.0.4",
-        "eslint-plugin-putout": "6.11.1",
+        "eslint-plugin-modules-newline": "0.0.6",
+        "eslint-plugin-putout": "7.0.0",
         "eslint-plugin-react": "7.22.0",
         "file-loader": "6.2.0",
-        "fork-ts-checker-webpack-plugin": "6.0.4",
-        "glob": "7.1.6",
+        "fork-ts-checker-webpack-plugin": "6.1.0",
         "jest": "26.6.3",
-        "putout": "13.1.2",
+        "putout": "14.0.0",
         "style-loader": "2.0.0",
         "ts-jest": "26.4.4",
-        "ts-loader": "8.0.11",
-        "ts-node": "9.0.0",
-        "typescript": "4.1.2",
-        "webpack": "4.44.2",
-        "webpack-cli": "4.2.0",
-        "webpack-dev-server": "3.11.0",
+        "ts-node": "9.1.1",
+        "typescript": "4.1.3",
+        "webpack": "5.18.0",
+        "webpack-cli": "4.4.0",
+        "webpack-dev-server": "3.11.2",
         "webpack-node-externals": "2.5.2"
     },
     "dependencies": {
+        "lodash": "^4.17.20",
+        "node-source-han-sans-sc": "^1.1.0-2.001R",
         "notistack": "1.0.3",
-        "react-cookie": "4.0.3"
+        "react-cookie": "4.0.3",
+        "typeface-nanum-square-round": "^1.0.2"
     }
 }
