--- a/package.json
+++ b/package.json
@@ -54,14 +54,16 @@
         "css-loader": "5.0.1",
         "css-modules-typescript-loader": "4.0.1",
         "eslint": "7.18.0",
+        "eslint-plugin-import": "2.22.1",
         "eslint-plugin-jest": "24.1.3",
         "eslint-plugin-modules-newline": "0.0.6",
-        "eslint-plugin-putout": "7.0.0",
+        "eslint-plugin-putout": "6.13.1",
         "eslint-plugin-react": "7.22.0",
+        "eslint-plugin-simple-import-sort": "7.0.0",
         "file-loader": "6.2.0",
         "fork-ts-checker-webpack-plugin": "6.1.0",
         "jest": "26.6.3",
-        "putout": "14.0.0",
+        "putout": "13.10.0",
         "style-loader": "2.0.0",
         "ts-jest": "26.4.4",
         "ts-node": "9.1.1",
