--- a/package.json
+++ b/package.json
@@ -19,57 +19,57 @@
     "license": "ISC",
     "homepage": "https://bitbucket.org/calmisland/kidsloop-px#readme",
     "peerDependencies": {
-        "@material-ui/core": "^4.11.1",
-        "@material-ui/icons": "^4.9.1",
-        "@material-ui/lab": "^4.0.0-alpha.56",
-        "@types/react": "^16.0.0",
-        "@types/react-dom": "^16.0.0",
-        "@types/react-router-dom": "^5.1.6",
-        "@types/styled-components": "^5.1.4",
-        "react": "^16.0.0",
-        "react-dom": "^16.0.0",
+        "@material-ui/core": "^4.11.3",
+        "@material-ui/icons": "^4.11.2",
+        "@material-ui/lab": "4.0.0-alpha.57",
+        "@types/react": "^17.0.2",
+        "@types/react-dom": "^17.0.1",
+        "@types/react-router-dom": "^5.1.7",
+        "@types/styled-components": "^5.1.7",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
         "styled-components": "^5.2.1",
-        "styled-icons": "^10.22.0"
+        "styled-icons": "^10.28.0"
     },
     "devDependencies": {
-        "@babel/core": "7.12.10",
-        "@babel/plugin-proposal-class-properties": "7.12.1",
-        "@babel/plugin-proposal-object-rest-spread": "7.12.1",
-        "@babel/preset-env": "7.12.11",
-        "@babel/preset-react": "7.12.10",
-        "@babel/preset-typescript": "7.12.7",
+        "@babel/core": "7.12.16",
+        "@babel/plugin-proposal-class-properties": "7.12.13",
+        "@babel/plugin-proposal-object-rest-spread": "7.12.13",
+        "@babel/preset-env": "7.12.16",
+        "@babel/preset-react": "7.12.13",
+        "@babel/preset-typescript": "7.12.16",
         "@testing-library/jest-dom": "5.11.9",
-        "@testing-library/react": "11.2.3",
-        "@testing-library/user-event": "12.6.2",
+        "@testing-library/react": "11.2.5",
+        "@testing-library/user-event": "12.7.1",
         "@types/jest": "26.0.20",
         "@types/lodash": "4.14.168",
-        "@types/node": "14.14.22",
+        "@types/node": "14.14.28",
         "@types/testing-library__jest-dom": "5.9.5",
-        "@typescript-eslint/eslint-plugin": "4.14.1",
-        "@typescript-eslint/parser": "4.14.1",
-        "@webpack-cli/serve": "1.2.2",
+        "@typescript-eslint/eslint-plugin": "4.15.1",
+        "@typescript-eslint/parser": "4.15.1",
+        "@webpack-cli/serve": "1.3.0",
         "babel-loader": "8.2.2",
         "clean-webpack-plugin": "3.0.0",
         "copy-webpack-plugin": "7.0.0",
-        "css-loader": "5.0.1",
+        "css-loader": "5.0.2",
         "css-modules-typescript-loader": "4.0.1",
-        "eslint": "7.18.0",
+        "eslint": "7.20.0",
         "eslint-plugin-import": "2.22.1",
-        "eslint-plugin-jest": "24.1.3",
+        "eslint-plugin-jest": "24.1.4",
         "eslint-plugin-modules-newline": "0.0.6",
-        "eslint-plugin-putout": "6.13.1",
+        "eslint-plugin-putout": "7.1.1",
         "eslint-plugin-react": "7.22.0",
         "eslint-plugin-simple-import-sort": "7.0.0",
         "file-loader": "6.2.0",
         "fork-ts-checker-webpack-plugin": "6.1.0",
         "jest": "26.6.3",
-        "putout": "13.10.0",
+        "putout": "15.1.1",
         "style-loader": "2.0.0",
-        "ts-jest": "26.4.4",
+        "ts-jest": "26.5.1",
         "ts-node": "9.1.1",
-        "typescript": "4.1.3",
-        "webpack": "5.18.0",
-        "webpack-cli": "4.4.0",
+        "typescript": "4.1.5",
+        "webpack": "5.22.0",
+        "webpack-cli": "4.5.0",
         "webpack-dev-server": "3.11.2",
         "webpack-node-externals": "2.5.2"
     },
