--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
         "@material-ui/core": "^4.11.3",
         "@material-ui/icons": "^4.11.2",
         "@material-ui/lab": "4.0.0-alpha.57",
-        "@types/react": "^17.0.2",
-        "@types/react-dom": "^17.0.1",
+        "@types/react": "^16.0.0 || ^17.0.0",
+        "@types/react-dom": "^16.0.0 || ^17.0.0",
         "@types/react-router-dom": "^5.1.7",
         "@types/styled-components": "^5.1.7",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
+        "react": "^16.0.0 || ^17.0.0",
+        "react-dom": "^16.0.0 || ^17.0.0",
         "styled-components": "^5.2.1",
         "styled-icons": "^10.28.0"
     },
