--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,11 @@
 example/
+.babelrc
 .eslintignore
 .eslint.js
-.gitignore
 .gitattributes
-.webpack.config.js
-.babelrc
+.gitignore
+jest.config.ts
+setupTests.ts
+tsconfig.eslint.json
+tsconfig.json
+webpack.config.js
