--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
         "clsx": "^1.1.1",
         "lodash": "^4.17.21",
         "node-source-han-sans-sc": "^1.1.0-2.001R",
-        "notistack": "^1.0.4",
+        "notistack": "1.0.3",
         "react-cookie": "^4.0.3",
         "typeface-nanum-square-round": "^1.0.2"
     }
