KL-4344 added storybook with basic setup

--- a/package.json
+++ b/package.json
@@ -1,84 +1,95 @@
 {
-    "name": "kidsloop-px",
-    "version": "1.0.0",
-    "description": "KidsLoop Product Experience UI Library",
-    "main": "./dist/main.js",
-    "types": "dist/types/index.d.ts",
-    "scripts": {
-        "build:js": "webpack",
-        "build:types": "tsc --emitDeclarationOnly",
-        "build": "npm test && npm run build:js && npm run build:types",
-        "test": "jest"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+ssh://git@bitbucket.org/calmisland/kidsloop-px.git"
-    },
-    "keywords": [],
-    "author": "KidsLoop",
-    "license": "ISC",
-    "homepage": "https://bitbucket.org/calmisland/kidsloop-px#readme",
-    "peerDependencies": {
-        "@material-ui/core": "^4.11.3",
-        "@material-ui/icons": "^4.11.2",
-        "@material-ui/lab": "4.0.0-alpha.57",
-        "@types/react": "^16.0.0 || ^17.0.0",
-        "@types/react-dom": "^16.0.0 || ^17.0.0",
-        "@types/react-router-dom": "^5.1.7",
-        "@types/styled-components": "^5.1.7",
-        "react": "^16.0.0 || ^17.0.0",
-        "react-dom": "^16.0.0 || ^17.0.0",
-        "styled-components": "^5.2.1",
-        "styled-icons": "^10.28.0"
-    },
-    "devDependencies": {
-        "@babel/core": "7.13.1",
-        "@babel/plugin-proposal-class-properties": "7.13.0",
-        "@babel/plugin-proposal-object-rest-spread": "7.13.0",
-        "@babel/preset-env": "7.13.5",
-        "@babel/preset-react": "7.12.13",
-        "@babel/preset-typescript": "7.13.0",
-        "@testing-library/jest-dom": "5.11.9",
-        "@testing-library/react": "11.2.5",
-        "@testing-library/user-event": "12.7.3",
-        "@types/jest": "26.0.20",
-        "@types/lodash": "4.14.168",
-        "@types/node": "14.14.31",
-        "@types/testing-library__jest-dom": "5.9.5",
-        "@typescript-eslint/eslint-plugin": "4.15.2",
-        "@typescript-eslint/parser": "4.15.2",
-        "@webpack-cli/serve": "1.3.0",
-        "babel-loader": "8.2.2",
-        "clean-webpack-plugin": "3.0.0",
-        "copy-webpack-plugin": "7.0.0",
-        "css-loader": "5.0.2",
-        "css-modules-typescript-loader": "4.0.1",
-        "eslint": "7.20.0",
-        "eslint-plugin-import": "2.22.1",
-        "eslint-plugin-jest": "24.1.5",
-        "eslint-plugin-modules-newline": "0.0.6",
-        "eslint-plugin-putout": "7.1.1",
-        "eslint-plugin-react": "7.22.0",
-        "eslint-plugin-simple-import-sort": "7.0.0",
-        "file-loader": "6.2.0",
-        "fork-ts-checker-webpack-plugin": "6.1.0",
-        "jest": "26.6.3",
-        "putout": "15.3.1",
-        "style-loader": "2.0.0",
-        "ts-jest": "26.5.2",
-        "ts-node": "9.1.1",
-        "typescript": "4.2.2",
-        "webpack": "5.24.1",
-        "webpack-cli": "4.5.0",
-        "webpack-dev-server": "3.11.2",
-        "webpack-node-externals": "2.5.2"
-    },
-    "dependencies": {
-        "clsx": "^1.1.1",
-        "lodash": "^4.17.21",
-        "node-source-han-sans-sc": "^1.1.0-2.001R",
-        "notistack": "^1.0.4",
-        "react-cookie": "^4.0.3",
-        "typeface-nanum-square-round": "^1.0.2"
-    }
+  "name": "kidsloop-px",
+  "version": "1.0.0",
+  "description": "KidsLoop Product Experience UI Library",
+  "main": "./dist/main.js",
+  "types": "dist/types/index.d.ts",
+  "scripts": {
+    "build:js": "webpack",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build": "npm test && npm run build:js && npm run build:types",
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@bitbucket.org/calmisland/kidsloop-px.git"
+  },
+  "keywords": [],
+  "author": "KidsLoop",
+  "license": "ISC",
+  "homepage": "https://bitbucket.org/calmisland/kidsloop-px#readme",
+  "peerDependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.57",
+    "@types/react": "^16.0.0 || ^17.0.0",
+    "@types/react-dom": "^16.0.0 || ^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.2.1",
+    "styled-icons": "^10.28.0"
+  },
+  "devDependencies": {
+    "@babel/core": "7.13.1",
+    "@babel/plugin-proposal-class-properties": "7.13.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.13.0",
+    "@babel/preset-env": "7.13.5",
+    "@babel/preset-react": "7.12.13",
+    "@babel/preset-typescript": "7.13.0",
+    "@storybook/addon-actions": "^6.2.0-rc.7",
+    "@storybook/addon-essentials": "^6.2.0-rc.7",
+    "@storybook/addon-links": "^6.2.0-rc.7",
+    "@storybook/addons": "^6.2.0-rc.8",
+    "@storybook/builder-webpack5": "^6.2.0-rc.7",
+    "@storybook/react": "^6.2.0-rc.7",
+    "@storybook/theming": "^6.2.0-rc.8",
+    "@testing-library/jest-dom": "5.11.9",
+    "@testing-library/react": "11.2.5",
+    "@testing-library/user-event": "12.7.3",
+    "@types/jest": "26.0.20",
+    "@types/lodash": "4.14.168",
+    "@types/node": "14.14.31",
+    "@types/testing-library__jest-dom": "5.9.5",
+    "@typescript-eslint/eslint-plugin": "4.15.2",
+    "@typescript-eslint/parser": "4.15.2",
+    "@webpack-cli/serve": "1.3.0",
+    "babel-loader": "8.2.2",
+    "clean-webpack-plugin": "3.0.0",
+    "copy-webpack-plugin": "7.0.0",
+    "css-loader": "5.0.2",
+    "css-modules-typescript-loader": "4.0.1",
+    "eslint": "7.20.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.5",
+    "eslint-plugin-modules-newline": "0.0.6",
+    "eslint-plugin-putout": "7.1.1",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "file-loader": "6.2.0",
+    "fork-ts-checker-webpack-plugin": "6.1.0",
+    "jest": "26.6.3",
+    "putout": "15.3.1",
+    "react": "*",
+    "react-dom": "*",
+    "style-loader": "2.0.0",
+    "ts-jest": "26.5.2",
+    "ts-node": "9.1.1",
+    "typescript": "4.2.2",
+    "webpack": "5.24.1",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2",
+    "webpack-node-externals": "2.5.2"
+  },
+  "dependencies": {
+    "clsx": "^1.1.1",
+    "lodash": "^4.17.21",
+    "node-source-han-sans-sc": "^1.1.0-2.001R",
+    "notistack": "^1.0.4",
+    "react-cookie": "^4.0.3",
+    "typeface-nanum-square-round": "^1.0.2"
+  }
 }
