--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
         "fork-ts-checker-webpack-plugin": "6.1.0",
         "jest": "26.6.3",
         "putout": "15.3.1",
-        "react": "*",
-        "react-dom": "*",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "style-loader": "2.0.0",
         "ts-jest": "26.5.2",
         "ts-node": "9.1.1",
