--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,7 +8,7 @@ pipelines:
             caches:
               - node
             script:
-              - npm install
+              - npm ci
               - npm test
               - npm run build
         - step:
