--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "peerDependencies": {
         "@material-ui/core": "^4.11.3",
         "@material-ui/icons": "^4.11.2",
-        "@material-ui/lab": "4.0.0-alpha.57",
+        "@material-ui/lab": "^4.0.0-alpha.57",
         "@types/react": "^16.0.0 || ^17.0.0",
         "@types/react-dom": "^16.0.0 || ^17.0.0",
         "@types/react-router-dom": "^5.1.7",
@@ -34,11 +34,11 @@
         "styled-icons": "^10.28.0"
     },
     "devDependencies": {
-        "@babel/core": "7.13.1",
+        "@babel/core": "7.14.0",
         "@babel/plugin-proposal-class-properties": "7.13.0",
-        "@babel/plugin-proposal-object-rest-spread": "7.13.0",
-        "@babel/preset-env": "7.13.5",
-        "@babel/preset-react": "7.12.13",
+        "@babel/plugin-proposal-object-rest-spread": "7.13.8",
+        "@babel/preset-env": "7.14.1",
+        "@babel/preset-react": "7.13.13",
         "@babel/preset-typescript": "7.13.0",
         "@storybook/addon-actions": "^6.2.0-rc.7",
         "@storybook/addon-essentials": "^6.2.0-rc.7",
@@ -48,39 +48,39 @@
         "@storybook/react": "^6.2.0-rc.7",
         "@storybook/theming": "^6.2.0-rc.8",
         "@testing-library/jest-dom": "5.11.9",
-        "@testing-library/react": "11.2.5",
-        "@testing-library/user-event": "12.7.3",
-        "@types/jest": "26.0.20",
+        "@testing-library/react": "11.2.6",
+        "@testing-library/user-event": "13.1.8",
+        "@types/jest": "26.0.23",
         "@types/lodash": "4.14.168",
-        "@types/node": "14.14.31",
+        "@types/node": "15.0.2",
         "@types/papaparse": "5.2.5",
         "@types/testing-library__jest-dom": "5.9.5",
-        "@typescript-eslint/eslint-plugin": "4.15.2",
-        "@typescript-eslint/parser": "4.15.2",
+        "@typescript-eslint/eslint-plugin": "4.23.0",
+        "@typescript-eslint/parser": "4.23.0",
         "@webpack-cli/serve": "1.3.0",
         "babel-loader": "8.2.2",
-        "clean-webpack-plugin": "3.0.0",
+        "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "7.0.0",
-        "css-loader": "5.0.2",
-        "css-modules-typescript-loader": "4.0.1",
-        "eslint": "7.20.0",
-        "eslint-plugin-import": "2.22.1",
-        "eslint-plugin-jest": "24.1.5",
-        "eslint-plugin-modules-newline": "0.0.6",
-        "eslint-plugin-putout": "7.1.1",
-        "eslint-plugin-react": "7.22.0",
+        "css-loader": "^5.2.4",
+        "css-modules-typescript-loader": "^4.0.1",
+        "eslint": "^7.26.0",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jest": "^24.3.6",
+        "eslint-plugin-modules-newline": "^0.0.6",
+        "eslint-plugin-putout": "^7.5.0",
+        "eslint-plugin-react": "^7.23.2",
         "eslint-plugin-simple-import-sort": "7.0.0",
         "file-loader": "6.2.0",
         "fork-ts-checker-webpack-plugin": "6.1.0",
         "html-webpack-plugin": "5.3.1",
-        "jest": "26.6.3",
-        "putout": "15.3.1",
+        "jest": "^26.6.3",
+        "putout": "^17.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "style-loader": "2.0.0",
-        "ts-jest": "26.5.2",
+        "style-loader": "^2.0.0",
+        "ts-jest": "^26.5.6",
         "ts-node": "9.1.1",
-        "typescript": "4.2.2",
+        "typescript": "4.2.4",
         "webpack": "5.24.1",
         "webpack-cli": "4.5.0",
         "webpack-dev-server": "3.11.2",
@@ -90,7 +90,7 @@
         "clsx": "^1.1.1",
         "lodash": "^4.17.21",
         "node-source-han-sans-sc": "^1.1.0-2.001R",
-        "notistack": "^1.0.4",
+        "notistack": "^1.0.7",
         "papaparse": "5.3.0",
         "react-cookie": "^4.0.3",
         "react-dropzone": "11.3.2",
