--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "peerDependencies": {
         "@material-ui/core": "^4.0.0",
         "@material-ui/icons": "^4.0.0",
-        "@material-ui/lab": "4.0.0-alpha.58",
+        "@material-ui/lab": "^4.0.0-alpha.0",
         "@types/react": "^16.0.0 || ^17.0.0",
         "@types/react-dom": "^16.0.0 || ^17.0.0",
         "@types/react-router-dom": "^5.1.7",
