--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -19,6 +19,23 @@ pipelines:
             script:
               - npm install eslint
               - npx eslint .
+  branches:
+    master:
+      - step:
+          script:
+            - npm ci
+            - VERSION=$(node -p -e "require('./package.json').version")
+            - TAG=$(git describe --tags $(git rev-list --tags --max-count=1))
+            - if [ $VERSION == $TAG ]; then
+            -   VERSION=$(npm version patch)
+            - else
+            -   npm version $VERSION
+            - fi
+            - npm run build
+            - git add .
+            - git commit -m "Upgrade to $VERSION [skip ci]"
+            - git tag $VERSION
+            - git push && git push --tags
 definitions:
   caches:
     dependecies: .npm
