add pre and post scripts for npm version command

--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "build:sb": "build-storybook",
         "start:sb": "start-storybook -p 6006",
         "test": "jest",
-        "lint": "eslint . --fix"
+        "lint": "eslint . --fix",
+        "preversion": "git checkout master && git pull origin master && npm ci",
+        "version": "npm run build && git add -A dist",
+        "postversion": "git push && git push --tags"
     },
     "repository": {
         "type": "git",
