--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,14 @@
+# general npm config
+progress=false
+color=false
 tag-version-prefix=""
 commit-hooks=false
 allow-same-version=true
+
+# create a new one at: https://github.com/settings/tokens/new
+//npm.pkg.github.com/:_authToken=${NPM_GITHUB_TOKEN}
+
+# internal repos and shorthands
+@KL-Engineering:registry=https://npm.pkg.github.com
+@kl-engineering:registry=https://npm.pkg.github.com
+@kidsloop-global:registry=https://npm.pkg.github.com
