feat!: add combobox to table filter value
Merged in WEBPX-38-add-combobox-component-to-table (pull request #103)

WEBPX-38 add combobox component to table

* Merge branch 'WEBPX-38-add-combobox-component-to-table' of bitbucket.org:calmisland/kidsloop-px into WEBPX-38-add-combobox-component-to-table

* test: describe test better

* chore: replace hardcoded values

* chore: replace hardcoded values

* fix: merge

* Merge branch 'master' of bitbucket.org:calmisland/kidsloop-px into HEAD

* build: increase build test size by 2x

* fix: merge conflict

* test: replace fireEvent with userEvent

* test: change fireEvent to userEvent


Approved-by: Henrik Wassdahl
Approved-by: Malcolm McConaghy

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,6 +14,7 @@ pipelines:
               - npm ci --prefer-offline --no-audit --cache .npm
               - npm test
               - npm run build
+            size: "2x"
         - step:
             name: Code Linting
             caches:
