--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
         "react-cookie": "^4.0.3",
         "react-dropzone": "^11.3.2",
         "react-easy-crop": "^3.5.1",
+        "react-resize-detector": "^7.0.0",
         "typeface-nanum-square-round": "^1.0.2",
         "use-debounce": "^6.0.1"
     }
