chore: set repo as private
Merged in set-repo-private (pull request #109)

chore: set repo as private

* chore: set repo as private

Merged in Ricardo-Barata/chore-set-repo-as-private-1646924220670 (pull request #108)

chore: set repo as private

Approved-by: Henrik Wassdahl

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "kidsloop-px",
     "version": "1.10.2",
+    "private": true,
     "description": "KidsLoop Product Experience UI Library",
     "main": "./dist/main.js",
     "types": "dist/types/index.d.ts",
