--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "@babel/preset-typescript": "7.16.0",
         "@commitlint/cli": "16.1.0",
         "@commitlint/config-conventional": "16.0.0",
-        "@kidsloop/eslint-config": "bitbucket:calmisland/kidsloop-eslint-config#1.4.1",
+        "@kl-engineering/eslint-config": "2.0.3",
         "@storybook/addon-actions": "^6.2.0-rc.7",
         "@storybook/addon-essentials": "^6.2.0-rc.7",
         "@storybook/addon-links": "^6.2.0-rc.7",
