--- a/package.json
+++ b/package.json
@@ -24,9 +24,15 @@
     "license": "ISC",
     "homepage": "https://github.com/KL-Engineering/kidsloop-px#readme",
     "peerDependencies": {
+        "@emotion/react": "^11.6.0",
+        "@emotion/styled": "^11.6.0",
         "@material-ui/core": "^4.12.3",
         "@material-ui/icons": "^4.0.0",
         "@material-ui/lab": "^4.0.0-alpha.0",
+        "@mui/icons-material": "^5.2.0",
+        "@mui/lab": "^5.0.0-alpha.56",
+        "@mui/material": "^5.2.0",
+        "@mui/styles": "^5.2.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "@types/react-router-dom": "^5.1.7",
@@ -34,13 +40,7 @@
         "react": "^17.0.0",
         "react-dom": "^17.0.0",
         "styled-components": "^5.0.0",
-        "styled-icons": "^10.28.0",
-        "@emotion/react": "^11.6.0",
-        "@emotion/styled": "^11.6.0",
-        "@mui/icons-material": "^5.2.0",
-        "@mui/lab": "^5.0.0-alpha.56",
-        "@mui/material": "^5.2.0",
-        "@mui/styles": "^5.2.0"
+        "styled-icons": "^10.28.0"
     },
     "devDependencies": {
         "@babel/core": "7.16.0",
@@ -53,6 +53,7 @@
         "@commitlint/cli": "16.1.0",
         "@commitlint/config-conventional": "16.0.0",
         "@kl-engineering/eslint-config": "2.0.3",
+        "@rushstack/eslint-patch": "1.1.1",
         "@storybook/addon-actions": "^6.2.0-rc.7",
         "@storybook/addon-essentials": "^6.2.0-rc.7",
         "@storybook/addon-links": "^6.2.0-rc.7",
