--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,10 @@
         ]
     },
     "include": [
-        "src/**/*",
-        "**.js"
+        "src/**/*.js",
+        "src/**/*.jsx",
+        "src/**/*.ts",
+        "src/**/*.tsx",
     ],
     "exclude": [
         "node_modules",
