--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -10,9 +10,9 @@ jobs:
         secrets:
             NODE_AUTH_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
 
-    # test-unit:
-    #     needs: [install]
-    #     uses: KL-Engineering/github-action-workflows/.github/workflows/npm-test-jest.yml@v2.0.0
+    test-unit:
+        needs: [install]
+        uses: KL-Engineering/github-action-workflows/.github/workflows/npm-test-jest.yml@v2.0.0
 
     lint:
         needs: [install]
