--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
     "name": "@kl-engineering/kidsloop-px",
     "version": "2.1.0",
     "description": "KidsLoop Product Experience UI Library",
-    "main": "./dist/main.js",
+    "main": "dist/main.js",
+    "module": "dist/main.js",
     "types": "dist/types/index.d.ts",
+    "files": [
+        "dist"
+    ],
+    "sideEffects": false,
     "scripts": {
         "build": "npm run build:js && npm run build:types",
         "build:js": "webpack",
         "build:types": "tsc --emitDeclarationOnly",
+        "build2": "rollup -c",
         "build:sb": "build-storybook",
         "start:sb": "start-storybook -p 6006",
         "test": "jest",
@@ -24,36 +30,24 @@
     "license": "ISC",
     "homepage": "https://github.com/KL-Engineering/kidsloop-px#readme",
     "peerDependencies": {
-        "@emotion/react": "^11.6.0",
-        "@emotion/styled": "^11.6.0",
-        "@material-ui/core": "^4.12.3",
-        "@material-ui/icons": "^4.0.0",
-        "@material-ui/lab": "^4.0.0-alpha.0",
-        "@mui/icons-material": "^5.2.0",
-        "@mui/lab": "^5.0.0-alpha.77",
-        "@mui/material": "^5.6.1",
-        "@mui/styles": "^5.2.0",
-        "@types/react": "^17.0.0",
+        "@types/react": "^17.0.2",
         "@types/react-dom": "^17.0.0",
-        "@types/react-router-dom": "^5.1.7",
-        "@types/styled-components": "^5.1.7",
-        "react": "^17.0.0",
-        "react-dom": "^17.0.0",
-        "styled-components": "^5.0.0",
-        "styled-icons": "^10.28.0"
+        "react": "^17.0.2",
+        "react-dom": "^17.0.0"
     },
     "devDependencies": {
-        "@babel/core": "7.16.0",
-        "@babel/plugin-proposal-class-properties": "7.16.0",
-        "@babel/plugin-proposal-object-rest-spread": "7.16.0",
-        "@babel/plugin-transform-typescript": "7.16.1",
-        "@babel/preset-env": "7.16.4",
-        "@babel/preset-react": "7.16.0",
-        "@babel/preset-typescript": "7.16.0",
+        "@babel/core": "7.17.9",
+        "@babel/preset-env": "7.16.11",
+        "@babel/preset-react": "7.16.7",
+        "@babel/preset-typescript": "7.16.7",
         "@commitlint/cli": "16.1.0",
         "@commitlint/config-conventional": "16.0.0",
         "@kl-engineering/eslint-config": "2.0.3",
-        "@rushstack/eslint-patch": "1.1.1",
+        "@rollup/plugin-alias": "3.1.9",
+        "@rollup/plugin-commonjs": "22.0.0",
+        "@rollup/plugin-node-resolve": "13.2.1",
+        "@rollup/plugin-replace": "4.0.0",
+        "@rushstack/eslint-patch": "1.1.3",
         "@storybook/addon-actions": "^6.2.0-rc.7",
         "@storybook/addon-essentials": "^6.2.0-rc.7",
         "@storybook/addon-links": "^6.2.0-rc.7",
@@ -67,40 +61,56 @@
         "@testing-library/react-hooks": "^7.0.1",
         "@testing-library/user-event": "13.1.8",
         "@types/jest": "26.0.23",
-        "@types/lodash": "4.14.168",
-        "@types/node": "15.0.2",
+        "@types/lodash-es": "4.17.6",
+        "@types/node": "17.0.27",
         "@types/papaparse": "5.2.5",
         "@types/react-color": "3.0.4",
         "@types/testing-library__jest-dom": "5.9.5",
-        "@webpack-cli/serve": "1.3.0",
-        "babel-loader": "8.2.3",
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^7.0.0",
-        "css-loader": "^5.2.4",
+        "@types/webpack-bundle-analyzer": "4.4.1",
+        "@types/webpack-node-externals": "2.5.3",
+        "@webpack-cli/serve": "1.6.1",
+        "babel-loader": "8.2.5",
+        "browserslist": "4.20.3",
+        "clean-webpack-plugin": "^4.0.0",
+        "copy-webpack-plugin": "^10.2.4",
+        "css-loader": "^6.7.1",
         "css-modules-typescript-loader": "^4.0.1",
         "eslint": "8.2.0",
         "file-loader": "^6.2.0",
         "fork-ts-checker-webpack-plugin": "^6.1.0",
-        "html-webpack-plugin": "^5.3.1",
         "husky": "^7.0.0",
         "jest": "^26.6.3",
-        "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "rollup-plugin-babel": "4.4.0",
+        "rollup-plugin-node-polyfills": "0.2.1",
+        "rollup-plugin-peer-deps-external": "2.2.4",
+        "rollup-plugin-postcss": "4.0.2",
+        "rollup-plugin-terser": "7.0.2",
+        "rollup-plugin-typescript2": "0.31.2",
         "standard-version": "9.3.2",
-        "style-loader": "^2.0.0",
+        "style-loader": "^3.3.1",
         "ts-jest": "^26.5.6",
-        "ts-node": "^9.1.1",
-        "typescript": "4.5.2",
-        "webpack": "5.24.1",
-        "webpack-cli": "4.5.0",
-        "webpack-dev-server": "^3.11.2",
-        "webpack-node-externals": "^2.5.2"
+        "ts-node": "10.7.0",
+        "typescript": "4.6.3",
+        "webpack": "5.72.0",
+        "webpack-bundle-analyzer": "4.5.0",
+        "webpack-cli": "4.9.2",
+        "webpack-dev-server": "^4.8.1",
+        "webpack-node-externals": "^3.0.0"
     },
     "dependencies": {
         "@date-io/dayjs": "^2.13.1",
+        "@emotion/react": "^11.6.0",
+        "@emotion/styled": "^11.6.0",
+        "@mui/icons-material": "^5.2.0",
+        "@mui/lab": "^5.0.0-alpha.77",
+        "@mui/material": "^5.6.1",
+        "@mui/styles": "^5.2.0",
         "@mui/x-date-pickers": "^5.0.0-alpha.0",
         "clsx": "^1.1.1",
-        "lodash": "^4.17.21",
+        "core-js": "3.22.2",
+        "dayjs": "1.11.1",
+        "lodash-es": "4.17.21",
         "node-source-han-sans-sc": "^1.1.0-2.001R",
         "notistack": "2.0.3",
         "papaparse": "^5.3.0",
