--- a/package.json
+++ b/package.json
@@ -2,24 +2,25 @@
     "name": "@kl-engineering/kidsloop-px",
     "version": "2.1.0",
     "description": "KidsLoop Product Experience UI Library",
-    "main": "dist/main.cjs",
-    "module": "dist/main.js",
-    "types": "dist/types/index.d.ts",
-    "sideEffects": [
-        "src/components/LanguageSelect.tsx"
+    "main": "dist/main.js",
+    "types": "dist/index.d.ts",
+    "sideEffects": false,
+    "files": [
+        "dist"
     ],
-    "type": "module",
     "scripts": {
         "build": "npm run build:js && npm run build:types",
         "build:js": "webpack",
         "build:types": "tsc --emitDeclarationOnly",
-        "build2": "rollup -c --context window",
+        "build2": "rm -rf dist && rollup -c --context window",
+        "build3": "rm -rf dist && tsc",
         "build:sb": "build-storybook",
         "start:sb": "start-storybook -p 6006",
         "test": "jest",
         "lint": "eslint .",
         "release": "standard-version",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "package": "npm pack"
     },
     "repository": {
         "type": "git",
@@ -44,6 +45,7 @@
         "@commitlint/config-conventional": "16.0.0",
         "@kl-engineering/eslint-config": "2.0.3",
         "@rollup/plugin-alias": "3.1.9",
+        "@rollup/plugin-babel": "5.3.1",
         "@rollup/plugin-commonjs": "22.0.0",
         "@rollup/plugin-node-resolve": "13.2.1",
         "@rollup/plugin-replace": "4.0.0",
@@ -72,6 +74,7 @@
         "@types/webpack-node-externals": "2.5.3",
         "@webpack-cli/serve": "1.6.1",
         "babel-loader": "8.2.5",
+        "babel-plugin-import": "1.13.5",
         "browserslist": "4.20.3",
         "clean-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^10.2.4",
@@ -84,7 +87,7 @@
         "jest": "^26.6.3",
         "react-dom": "^17.0.2",
         "rollup": "2.70.2",
-        "rollup-plugin-babel": "4.4.0",
+        "rollup-plugin-dts": "4.2.1",
         "rollup-plugin-esbuild": "4.9.1",
         "rollup-plugin-node-polyfills": "0.2.1",
         "rollup-plugin-peer-deps-external": "2.2.4",
