--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -4,8 +4,10 @@
     },
     "extends": "./tsconfig.json",
     "include": [
+        ".*.cjs",
         ".*.js",
         ".*.ts",
+        "*.cjs",
         "*.js",
         "*.ts",
         "**/*.ts",
