--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
     "version": "2.1.1",
     "description": "KidsLoop Product Experience UI Library",
     "main": "./dist/main.js",
-    "types": "dist/types/index.d.ts",
+    "types": "./dist/src/index.d.ts",
     "scripts": {
         "build": "npm run build:js && npm run build:types",
         "build:js": "webpack",
         "build:types": "tsc --emitDeclarationOnly",
         "build:sb": "build-storybook",
+        "icons:generate": "ts-node scripts/generate-icons.ts",
         "start:sb": "start-storybook -p 6006",
         "test": "jest",
         "lint": "eslint .",
@@ -62,10 +63,12 @@
         "@storybook/manager-webpack5": "^6.3.4",
         "@storybook/react": "^6.2.0-rc.7",
         "@storybook/theming": "^6.2.0-rc.8",
+        "@svgr/webpack": "6.2.1",
         "@testing-library/jest-dom": "5.11.9",
         "@testing-library/react": "11.2.6",
         "@testing-library/react-hooks": "^7.0.1",
         "@testing-library/user-event": "13.1.8",
+        "@types/dotenv": "8.2.0",
         "@types/jest": "26.0.23",
         "@types/lodash": "4.14.168",
         "@types/node": "15.0.2",
@@ -73,11 +76,13 @@
         "@types/react-color": "3.0.4",
         "@types/testing-library__jest-dom": "5.9.5",
         "@webpack-cli/serve": "1.3.0",
+        "axios": "0.27.2",
         "babel-loader": "8.2.3",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^7.0.0",
         "css-loader": "^5.2.4",
         "css-modules-typescript-loader": "^4.0.1",
+        "dotenv": "16.0.0",
         "eslint": "8.2.0",
         "file-loader": "^6.2.0",
         "fork-ts-checker-webpack-plugin": "^6.1.0",
@@ -91,6 +96,7 @@
         "ts-jest": "^26.5.6",
         "ts-node": "^9.1.1",
         "typescript": "4.5.2",
+        "url-loader": "4.1.1",
         "webpack": "5.24.1",
         "webpack-cli": "4.5.0",
         "webpack-dev-server": "^3.11.2",
